Fix ribbon overflowing with long partype text

--- a/frontend/projects/troll-build/src/styles/_ribbon.scss
+++ b/frontend/projects/troll-build/src/styles/_ribbon.scss
@@ -6,11 +6,12 @@
       left: calc(.05rem - 1.2em);
       border-color: black;
       position: absolute;
-      top: 1rem;
+      top: 0.6rem;
       background-color: grey;
-      padding-left: 1.6em;
+      padding-left: 1.5em;
       padding-right: 1.5em;
       border-radius: 0 0.2em 0.2em 0;
+      font-size: 10pt;
 
       &:after {
         position: absolute;
